src/pages/AboutUs/AboutUs.scss
@import '../../variables.scss';

.about-us {
    background-color: $EerieBlack;

    .horizontal-scroll-year-section {
        width: 100%;
        background-color: $Black;
        margin-top: 0rem;
    }

    .year-section {
        width: 75%;
        margin-right: auto;
        margin-left: auto;
        background: $Black;
        display: flex;
        padding-bottom: 1rem;
        overflow-x: auto;
        white-space: nowrap;

        .year {
            color: $DarkWhite;
            font-size: 3rem;
            font: $font-heading;
            display: inline;
            font-style: italic;
            margin: 0rem 1.5rem;

            .gradient-underline {
                display: none;
            }
        }
    }

    .year-section div:last-child {
        color: $White !important;

        .gradient-underline {
            display: block !important;
        }
    }

    .year-section::-webkit-scrollbar {
        display: none;
    }

    @media screen and (max-width: 768px) {
        .year-section {
            margin-top: -1rem !important;
            padding-top: 2rem !important;
        }
        
        .year {
            margin-right: 2rem !important;

            h1 {
                font-size: 3rem !important;
            }
        }
    }
}

